--- a/src/index.html
+++ b/src/index.html
@@ -108,9 +108,9 @@
     <section class="contact">
         <div class="container flex justify-center">
             <div class="contact--wrap bg-white flex items-center justify-between">
-               <div class="w-1/2"><img class="object-contain w-auto sm: px-3 md:px-4 lg:px-0" src="/img/contact.png" alt=""></div>
+               <div class="w-1/2 lg:mt-8"><img class="object-contain w-auto sm: px-3 md:px-4 lg:px-0" src="/img/contact.png" alt=""></div>
                <div class="w-1/2">
-                <h2 class="sm: text-3xl md:text-4xl font-bold text-black opacity-87 mb-2">Зв'яжіться з нами</h2>
+                <h2 class="sm: text-2xl md:text-3xl lg:text-4xl sm: font-semibold md:font-bold text-black opacity-87 mb-2 sm: mr-2 md:mr-0">Зв'яжіться з нами</h2>
                 <p class="opacity-54 sm: mb-6 sm: pr-4 md:mb-8 md:pr-2 sm: text-sm md:text-base">Надішліть нам своє повідомлення і ми з вами зв’яжемось</p>
                 <form action="#" class="contact--form">
                         <input class="bg-second-gray icon-text focus:outline-0 focus:shadow-outline border border-gray-300 rounded-lg py-2 px-12 block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" type="text" placeholder="Ім'я">
