--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
     //= templates/l-header-global.html
     <section class="intro flex justify-center items-center text-white">
         <div class="intro-wrap text-center">
-            <h1 class="sm: text-3xl md:text-4xl leading-snug">Lorem ipsum dolor sit amet, consectetur 
+            <h1 class="xs: px-1 xs:text-2xl sm: text-3xl md:text-4xl leading-snug">Lorem ipsum dolor sit amet, consectetur 
             adipiscing elit.</h1>
-            <p class="opacity-54 my-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
+            <p class="opacity-54 my-8 xs: px-2 sm: px-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
             Fusce nec convallis metus. Pellentesque posuere eu odio vel aliquet. </p>
-            <button class="btn-main btn-main--shadow btn-main--primary bg-white text-primary-purple py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Замовити</button>
+            <button class="btn-main btn-main--shadow btn-main--primary bg-white text-primary-purple py-2 px-4 sm:py-2 sm:px-6 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Замовити</button>
         </div>
         <div class="scroll-down absolute bottom-0 mb-8"></div>
     </section>
 
     <section class="about sm: px-8 md:px-8 lg:px-6 xl:px-0">
-        <div class="container flex justify-between">
-            <div class="w-1/2">
+        <div class="container xs: block md:flex md:justify-between">
+            <div class="xs: w-full md:w-1/2">
                 <h2 class="sm: text-3xl sm: text-center md:text-4xl md:text-left font-bold text-black opacity-87 sm: mb-6 md:mb-8 lg:mb-10 xl:mb-12">Про нас</h2>
                 <p class="mb-8 opacity-54">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. 
                 </p>
@@ -35,19 +35,19 @@
                         Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії 
                         Lorem Ipsum.
                 </p>
-                <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
+                <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-4 sm:py-2 sm:px-6 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
             </div>
-            <div class="w-1/2 inline-flex justify-end">
+            <div class="xs: hidden md: inline-flex md:w-1/2  justify-end">
                 <img class="object-contain" src="/img/about.png" alt="Services">
             </div>
         </div>
     </section>
     <section class="services bg-primary-gray sm: px-8 md:px-8 lg:px-6 xl:px-0">
-        <div class="container flex justify-between">
-            <div class="w-1/2 sm: mr-10 md:mr-4">
+        <div class="container xs: block md:flex md:justify-between">
+            <div class="xs: hidden md: inline-flex md:w-1/2 sm: mr-10 md:mr-4">
                 <img src="./img/services.png" alt="Services" class="object-contain">
             </div>
-            <div class="w-1/2 sm: ml-10 md:ml-4">
+            <div class="xs: w-full xs:ml-0 xs:mx-2 md:w-1/2 sm: ml-10 md:ml-4">
                 <h2 class="sm: text-3xl md:text-4xl font-bold text-black opacity-87 sm: mb-6 md:mb-8 lg:mb-10 xl:mb-12">Наші послуги</h2>
                 <p class="mb-8 opacity-54">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. 
                 </p>
@@ -55,13 +55,13 @@
                         Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії 
                         Lorem Ipsum.
                 </p>
-                <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
+                <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-4 sm:py-2 sm:px-6 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
             </div>
         </div>
     </section>
     <section class="advantages sm: px-8 md:px-8 lg:px-6 xl:px-0">
-            <div class="container flex justify-between">
-                    <div class="w-1/2">
+            <div class="container xs: block md:flex md:justify-between">
+                    <div class="xs: w-full md:w-1/2">
                         <h2 class="sm: text-3xl md:text-4xl font-bold text-black opacity-87 sm: mb-6 md:mb-8 lg:mb-10 xl:mb-12">Переваги</h2>
                         <p class="mb-8 opacity-54">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. 
                         </p>
@@ -69,9 +69,9 @@
                                 Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії 
                                 Lorem Ipsum.
                         </p>
-                        <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
+                        <button class="btn-main btn-main--shadow btn-main--primary bg-primary py-2 px-4 sm:py-2 sm:px-6 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold">Детальніше</button>
                     </div>
-                    <div class="w-1/2 inline-flex justify-end">
+                    <div class="xs: hidden md: inline-flex md:w-1/2 justify-end">
                         <img class="object-contain" src="/img/advantages.png" alt="Services">
                     </div>
                 </div>
@@ -79,28 +79,28 @@
     <section class="gallery bg-primary-gray">
         <h2 class="sm: text-3xl md:text-4xl font-bold text-black opacity-87 sm: mb-4 md:mb-6 lg: mb-8 xl: mb-10 text-center">Галерея</h2>
         <div class="flex flex-wrap w-full justify-center">
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 xs: mx-2 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
-            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/5 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
+            <div class="w-auto sm: inline-flex sm: justify-center md:block md:w-1/3 lg:w-1/4 xl:w-1/5 mt-4 sm: mx-0 md:mx-4 mb-4">
             <img class="sm: w-full md:w-auto" src="./img/gallery-item.png" alt="gallery item 1">
             </div>
           </div>
@@ -108,15 +108,15 @@
     <section class="contact">
         <div class="container flex justify-center">
             <div class="contact--wrap bg-white flex items-center justify-between">
-               <div class="w-1/2 lg:mt-8"><img class="object-contain w-auto sm: px-3 md:px-4 lg:px-0" src="/img/contact.png" alt=""></div>
-               <div class="w-1/2">
+               <div class="xs: hidden md:flex md:w-1/2 lg:mt-8"><img class="object-contain w-auto sm: px-3 md:px-4 lg:px-0" src="/img/contact.png" alt=""></div>
+               <div class="xs: w-full xs:text-center md:w-1/2">
                 <h2 class="sm: text-2xl md:text-3xl lg:text-4xl sm: font-semibold md:font-bold text-black opacity-87 mb-2 sm: mr-2 md:mr-0">Зв'яжіться з нами</h2>
-                <p class="opacity-54 sm: mb-6 sm: pr-4 md:mb-8 md:pr-2 sm: text-sm md:text-base">Надішліть нам своє повідомлення і ми з вами зв’яжемось</p>
+                <p class="opacity-54 sm: mb-6 xs: px-2 sm:pr-4 md:pr-2 md:mb-8 sm: text-sm md:text-base">Надішліть нам своє повідомлення і ми з вами зв’яжемось</p>
                 <form action="#" class="contact--form">
-                        <input class="bg-second-gray icon-text focus:outline-0 focus:shadow-outline border border-gray-300 rounded-lg py-2 px-12 block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" type="text" placeholder="Ім'я">
-                        <input class="bg-second-gray icon-mail focus:outline-0 focus:shadow-outline border border-gray-300 rounded-lg py-2 px-12 block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" type="email" placeholder="Електронна пошта">
-                        <textarea class="bg-second-gray focus:outline-0 focus:shadow-outline border border-gray-300 rounded-lg py-2 px-4 resize-none block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" cols="30" rows="5" placeholder="Ваше повідомлення..."></textarea>
-                        <button class="btn-main btn-main--shadow btn-main--primary bg-primary rounded-lg w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full py-2 px-2 sm:py-2 sm:px-4 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold" type="submit">Надіслати</button>
+                        <input class="bg-second-gray icon-text border border-gray-300 rounded-lg py-2 pl-12 pr-4 block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" type="text" placeholder="Ім'я">
+                        <input class="bg-second-gray icon-mail border border-gray-300 rounded-lg py-2 pl-12 pr-4 block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" type="email" placeholder="Електронна пошта">
+                        <textarea class="bg-second-gray border border-gray-300 rounded-lg py-2 px-4 resize-none block w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full mb-4" cols="30" rows="5" placeholder="Ваше повідомлення..."></textarea>
+                        <button class="btn-main btn-main--shadow btn-main--primary bg-primary rounded-lg w-11/12 sm:w-11/12 md:w-full lg:w-full xl:w-full py-2 px-4 sm:py-2 sm:px-6 md:py-3 md:px-8 lg:py-3 lg:px-10 sm: font-semibold md:font-bold" type="submit">Надіслати</button>
                 </form>
             </div>
             </div>
